--- a/examples/calendar/css/layout.css
+++ b/examples/calendar/css/layout.css
@@ -1,19 +1,37 @@
 .day{
+	font-size: 15pt;
 	height:150px;
 	margin: 2px;
 	padding: 10px;
-	width:50px;
-	border: 1px solid black;
+	width:150px;
 	float:left;
+	box-shadow: 1px 1px 4px grey;
 }
+.day label{
+	display: block;
+}
+
+.day:nth-child(6n+6){
+	background-color: #fb0;
+}
+.day:nth-child(7n+7){
+	background-color: #fb0;
+}
+
 .event{
 	background-color:#bbb0de;
 	display:block;
 	width:100%;
 	margin-bottom:1px;
 	font-size:8pt;
+	font-family: Verdana;
+	padding: 2px;
+}
+.event:hover{
+	background-color: #9ac738;
 }
 .week{
+	min-width: 1300px;
 	display:block;
 	clear:both;
 }
